--- a/requirements.txt
+++ b/requirements.txt
@@ -189,7 +189,7 @@ pysnmp==4.4.12
 python-dateutil==2.8.1
 pytz==2019.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==302
+pywin32==225
 pywinpty==1.1.6
 pyzmq==22.3.0
 redis==3.5.3
@@ -232,7 +232,7 @@ threadpoolctl==3.0.0
 tifffile==2021.10.12
 toml==0.10.2
 toolz==0.11.2
-torch==1.9.0+cu102
+torch==1.9.0
 torchaudio==0.9.0
 torchvision==0.10.0+cu102
 tornado==6.1
