--- a/requirements.txt
+++ b/requirements.txt
@@ -190,6 +190,7 @@ python-dateutil==2.8.1
 pytz==2019.3
 pytz-deprecation-shim==0.1.0.post0
 pywinpty==1.1.6
+pywin32
 pyzmq==22.3.0
 redis==3.5.3
 regex==2021.10.23
