--- a/requirements.txt
+++ b/requirements.txt
@@ -1,264 +1,6 @@
-Automat==20.2.0
-Deprecated==1.2.13
-Django==3.1.13
-GitPython==3.1.24
-Jinja2==3.0.2
-Keras-Preprocessing==1.1.2
-Markdown==3.3.6
-MarkupSafe==2.0.1
-Pillow==8.3.2
-PyOpenGL==3.1.5
-PyQt5==5.15.5
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.9.0
-PyWavelets==1.1.1
-PyYAML==6.0
-Pygments==2.10.0
-Pympler==1.0.1
-Send2Trash==1.8.0
-Shapely==1.8.1.post1
-Twisted==22.2.0
-Werkzeug==2.0.3
-absl-py==1.0.0
-aiofiles==0.8.0
-altair==4.1.0
-anyio==3.5.0
-appdirs==1.4.4
-argcomplete==2.0.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.4.1
-astor==0.8.1
-astunparse==1.6.3
-attr==0.3.1
-attrs==21.2.0
-azure-core==1.19.0
-azure-storage-blob==12.9.0
-backcall==0.2.0
-base58==2.1.1
-bleach==4.1.0
-blinker==1.4
-boto==2.49.0
-boto3==1.16.28
-botocore==1.19.28
-boxing==0.1.4
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==7.1.2
-colorama==0.4.4
-constantly==15.1.0
-construct==2.10.68
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==35.0.0
-cycler==0.10.0
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-dill==0.3.4
-distlib==0.3.4
-django-annoying==0.10.6
-django-cors-headers==3.6.0
-django-debug-toolbar==3.2.1
-django-extensions==3.1.0
-django-filter==2.4.0
-django-model-utils==4.1.1
-django-ranged-fileresponse==0.1.2
-django-redis-cache==3.0.0
-django-rest-swagger==2.2.0
-django-rq==2.4.1
-django-user-agents==0.4.0
-djangorestframework==3.12.4
-dnspython==2.2.1
-docopt==0.6.2
-drf-dynamic-fields==0.3.0
-drf-generators==0.3.0
-drf-yasg==1.20.0
-entrypoints==0.3
-eventlet==0.33.0
-fiftyone==0.15.0.1
-fiftyone-brain==0.8.1
-fiftyone-db==0.3.0
-filelock==3.6.0
-flatbuffers==2.0
-flow==0.0.1
-future==0.18.2
-gast==0.5.3
-gitdb==4.0.9
-glob2==0.7
-google-api-core==1.31.3
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-google-cloud-appengine-logging==0.2.0
-google-cloud-audit-log==0.2.0
-google-cloud-core==1.7.2
-google-cloud-logging==2.6.0
-google-cloud-storage==1.28.1
-google-pasta==0.2.0
-google-resumable-media==0.5.1
-googleapis-common-protos==1.53.0
-greenlet==1.1.2
-grpcio==1.41.1
-h11==0.12.0
-h5py==3.6.0
-htmlmin==0.1.12
-httpcore==0.14.7
-httpx==0.22.0
-hyperlink==21.0.0
-idna==3.3
-imageio==2.9.0
-importlib-metadata==4.11.3
-incremental==21.3.0
-inflection==0.5.1
-ipykernel==6.6.0
-ipython==7.30.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isodate==0.6.0
-itypes==1.2.0
-jedi==0.18.1
-jmespath==0.10.0
-joblib==1.1.0
-jsonschema==3.2.0
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.2
-kaleido==0.2.1
-keras==2.8.0
-kiwisolver==1.3.2
-label-studio==1.3.post1
-label-studio-converter==0.0.33rc1
-libclang==13.0.0
-lockfile==0.12.2
-lxml==4.6.3
 matplotlib==3.4.3
-matplotlib-inline==0.1.3
-mistune==0.8.4
-mongoengine==0.20.0
-motor==2.5.1
-msrest==0.6.21
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-ndjson==0.3.1
-nest-asyncio==1.5.4
-networkx==2.6.3
-nltk==3.5
-notebook==6.4.6
 numpy==1.21.2
-oauthlib==3.1.1
-openapi-codec==1.3.2
-opencv-python==4.5.5.64
-opencv-python-headless==4.5.5.64
-opt-einsum==3.3.0
-ordered-set==4.0.2
-packaging==21.2
-pandas==1.3.4
-pandocfilters==1.5.0
-parso==0.8.3
-patool==1.12
-pickleshare==0.7.5
-pip==22.1.2
-pipreqs==0.4.11
-platformdirs==2.5.1
-plotly==4.14.3
-ply==3.11
-pprintpp==0.4.0
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-proto-plus==1.19.6
-protobuf==3.17.3
-psutil==5.9.0
-psycopg2-binary==2.9.1
-pyarrow==6.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pycryptodomex==3.14.1
-pydantic==1.8.2
-pydeck==0.7.1
-pymongo==3.12.3
-pyparsing==2.4.7
-pypiwin32==223
-pyrsistent==0.18.0
-pysmi==0.3.4
-pysnmp==4.4.12
-python-dateutil==2.8.1
-pytz==2019.3
-pytz-deprecation-shim==0.1.0.post0
-pywinpty==1.1.6
-pywin32
-pyzmq==22.3.0
-redis==3.5.3
-regex==2021.10.23
-requests==2.26.0
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rfc3986==1.5.0
-rq==1.10.0
-rsa==4.7.2
-ruamel.yaml==0.17.17
-ruamel.yaml.clib==0.2.6
-rules==2.2
-s3transfer==0.3.7
-scikit-image==0.18.3
-scikit-learn==1.0.1
-scipy==1.7.1
-sentry-sdk==1.4.3
-setuptools==57.4.0
-simplejson==3.17.5
-six==1.16.0
-sklearn==0.0
-smmap==5.0.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-sqlparse==0.4.2
+Pillow==9.2.0
 streamlit==1.3.0
-tabulate==0.8.9
-tensor==0.3.6
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
-termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-tf-estimator-nightly==2.8.0.dev2021122109	
-threadpoolctl==3.0.0
-tifffile==2021.10.12
-toml==0.10.2
-toolz==0.11.2
-torch==1.9.0
-torchaudio==0.9.0
+torch==1.9.0+cu102
 torchvision==0.10.0+cu102
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-trimesh==3.10.5
-twisted-iocpsupport==1.0.2
-typing-extensions==3.10.0.2
-tzdata==2021.5
-tzlocal==4.1
-ua-parser==0.10.0
-ujson==4.2.0
-universal-analytics-python3==1.1.1
-uritemplate==4.1.1
-urllib3==1.26.7
-user-agents==2.2.0
-validators==0.18.2
-virtualenv==20.14.1
-visvis==1.13.0
-voxel51-eta==0.6.5
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-wheel==0.37.0
-widgetsnbextension==3.5.2
-wrapt==1.14.0
-xmljson==0.2.0
-xmltodict==0.12.0
-yarg==0.1.9
