--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ matplotlib==3.4.3
 numpy==1.21.2
 Pillow==9.2.0
 streamlit==1.3.0
-torch==1.9.0+cu102
-torchvision==0.10.0+cu102
+torch==1.9.0
+torchvision==0.10.0
